<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:onClick="hideKeyboard">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="40sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:onClick="hideKeyboard"
        android:layout_weight="20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title1_browsing_settings"
                android:textSize="30sp"
                android:paddingBottom="0dp"
                android:paddingLeft="7.3dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingStart="7.3dp"
                android:paddingEnd="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/disable_javascript"
                    android:textSize="20sp" />

                <Switch
                    android:id="@+id/disableJavascriptToggle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/disable_tracking_protection"
                    android:textSize="20sp"/>

                <Switch
                    android:id="@+id/disableTPToggle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desktop_mode"
                    android:textSize="20sp" />

                <Switch
                    android:id="@+id/desktopToggle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="2dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/custom_user_agent"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/userAgentEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70dp"
                    android:layout_marginLeft="70dp"
                    android:autofillHints="no"
                    android:hint="@string/custom_user_agent_hint"
                    android:inputType="textNoSuggestions"
                    android:singleLine="true"
                    android:textSize="17sp" />
<!--                was 100dp with no text size-->

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/private_mode"
                    android:textSize="20sp" />

                <Switch
                    android:id="@+id/privateModeToggle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title2_ui_settings"
                android:textSize="30sp"
                android:paddingBottom="0dp"
                android:paddingLeft="7.3dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingStart="7.3dp"
                android:paddingEnd="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/autohide_search_bar"
                    android:textSize="20sp" />

                <Switch
                    android:id="@+id/autoHideBarToggle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hide_white_splash"
                    android:textSize="20sp" />

                <Switch
                    android:id="@+id/hideWhiteSplashToggle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title3_search_settings"
                android:textSize="30sp"
                android:paddingBottom="0dp"
                android:paddingLeft="7.3dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingStart="7.3dp"
                android:paddingEnd="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_suggestions"
                    android:textSize="20sp" />

                <Switch
                    android:id="@+id/searchSuggestionsToggle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="2dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_engine"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/searchEngineEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70dp"
                    android:layout_marginLeft="70dp"
                    android:autofillHints="no"
                    android:hint="@string/search_engine_hint"
                    android:inputType="textNoSuggestions"
                    android:singleLine="true"
                    android:textSize="17sp" />
                <!--                was 100dp with no text size-->

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/settingsSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textAllCaps="true"
        android:layout_gravity="end"/>
</LinearLayout>