<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarView"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">

        <TextView
            android:id="@+id/trackerCountView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_background"
            android:gravity="center"
            android:text="@string/_0"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:adjustViewBounds="true"/>

        <RelativeLayout
            android:id="@+id/toolbarRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <EditText
                android:id="@+id/urlEditText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toStartOf="@+id/settingsButton"
                android:layout_toLeftOf="@+id/settingsButton"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:background="@android:color/transparent"
                android:hint="@string/location_hint"
                android:importantForAutofill="no"
                android:inputType="text|textUri"
                android:paddingStart="7dp"
                android:paddingEnd="7dp"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <ImageButton
                android:id="@+id/settingsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:scaleType="fitEnd"
                android:src="@drawable/settings_icon"
                android:contentDescription="@string/app_name"
                android:background="@android:color/transparent"
                android:adjustViewBounds="true"
                android:padding="5dp"/>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <ProgressBar
        android:id="@+id/pageProgressView"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_alignBottom="@id/toolbarView" />

    <org.mozilla.geckoview.GeckoView
        android:id="@+id/geckoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarView"
        tools:context=".MainActivity"
        android:visibility="invisible"/>

</RelativeLayout>